addressed accessibility issue (insufficient contrast, missing alt text); updated logo size to smaller

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -36,7 +36,7 @@ body {
 
 .navbar .navbar-nav .nav-link {
     text-transform: uppercase;
-    color: #ca9903;
+    color: #ffc000;
 }
 
 .navbar .navbar-toggler {
@@ -53,7 +53,7 @@ from stackoverflow https://stackoverflow.com/questions/42586729/bootstrap-4-chan
 }
 
 .navbar .navbar-nav .nav-item a:hover {
-    color: #ffc000;
+    color: #ca9903;
 }
 
 .navbar-brand {
@@ -123,7 +123,7 @@ form {
 }
 
 form .btn {
-    background-color: #5E90A7;
+    background-color: #3F6F86;
 }
 
 /* ToDo: style labels, paragraph, text boxes borders, frame around the form?
@@ -166,20 +166,26 @@ capitalize options
     padding-bottom: 100px;
 }
 
-#timetable .table {
-    background-color: #5E90A7;
+.table {
+    background-color: #3F6F86;
     color: #fff;
     text-align: center;
 }
 
-#timetable thead {
-     background-color: #6C7C8B;
+.table tbody td {
+     vertical-align: middle;
+}
+
+.table thead {
+     background-color: #4e5964;
      text-transform: uppercase;
     
 }
 
-#timetable tbody th {
-     background-color: #6C7C8B;
+.table tbody th {
+     background-color: #4e5964;
+     white-space: nowrap;
+     vertical-align: middle;
 }
 
 /* ----------------------------------------Timetable Printing */
